--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -140,6 +140,13 @@ fi
 %{_datadir}/man/man1/%{name}.1*
 
 %changelog
+* Tue Sep 25 2007 Daniel P. Berrange <berrange@redhat.com> - 0.5.1-1
+- Open connections in background
+- Make VNC connection retries more robust
+- Allow changing of CDROM media on the fly
+- Add PXE boot installation of HVM guests
+- Allow tunnelling VNC over SSH
+
 * Wed Aug 29 2007 Daniel P. Berrange <berrange@redhat.com> - 0.5.0-1
 - Support for managing remote hosts
 - Switch to use GTK-VNC for the guest console
