--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -140,6 +140,12 @@ fi
 %{_datadir}/man/man1/%{name}.1*
 
 %changelog
+* Thu Oct  4 2007 Daniel P. Berrange <berrange@redhat.com> - 0.5.2-1
+- No scrollbars for high res guest in low res host (rhbz 273181)
+- Unable to remove network device (rhbz 242900)
+- Fixed broken menu items (rhbz 307551)
+- Allow adding of graphics console (rhbz 215524)
+
 * Tue Sep 25 2007 Daniel P. Berrange <berrange@redhat.com> - 0.5.1-1
 - Open connections in background
 - Make VNC connection retries more robust
