Refresh GPL text with latest FSF address & fix spec file license tag

--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -12,7 +12,7 @@ Release: 1%{_extra_release}
 Summary: Virtual Machine Manager
 
 Group: Applications/Emulators
-License: GPL
+License: GPLv2+
 URL: http://virt-manager.et.redhat.com/
 Source0: http://virt-manager.et.redhat.com/download/sources/%{name}/%{name}-%{version}.tar.gz
 BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
