--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -35,7 +35,7 @@ Requires: gnome-python2-gnomevfs >= 2.15.4
 # Minimum we've tested with
 Requires: libxml2-python >= 2.6.23
 # Required to install Xen & QEMU guests
-Requires: python-virtinst >= 0.103.0
+Requires: python-virtinst >= 0.300.2
 # Required for loading the glade UI
 Requires: pygtk2-libglade
 # Required for our graphics which are currently SVG format
@@ -140,6 +140,13 @@ fi
 %{_datadir}/man/man1/%{name}.1*
 
 %changelog
+* Thu Jan 10 2008 Daniel P Berrange <berrange@redhat.com> - 0.5.3-1
+- Reintroduce 'new' button
+- Make restore work again
+- Add menu for sending special keys
+- Fix license headers on all source
+- Lots of misc bug fixes
+
 * Thu Oct  4 2007 Daniel P. Berrange <berrange@redhat.com> - 0.5.2-1
 - No scrollbars for high res guest in low res host (rhbz 273181)
 - Unable to remove network device (rhbz 242900)
