--- a/src/virt-manager.py.in
+++ b/src/virt-manager.py.in
@@ -172,12 +172,9 @@ def show_engine(engine, show, uri, uuid):
         if engine.config.get_connections() is None or len(engine.config.get_connections()) == 0:
             tryuri = None
             if os.path.exists("/var/lib/xend") and os.path.exists("/proc/xen"):
-                tryuri = "xen"
+                tryuri = "xen:///"
             elif os.path.exists("/usr/bin/qemu"):
-                if os.getuid() == 0:
-                    tryuri = "qemu:///system"
-                else:
-                    tryuri = "qemu:///session"
+                tryuri = "qemu:///system"
             if tryuri is not None:
                 conn = engine.add_connection(tryuri)
         engine.show_manager()
