Update for new release

--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -142,6 +142,10 @@ fi
 %{_datadir}/man/man1/%{name}.1*
 
 %changelog
+* Mon Mar 10 2008 Daniel P Berrange <berrange@redhat.com> - 0.5.4-1
+- Use capabilities XML when creating guests
+- Allow scaling of VNC window
+
 * Thu Jan 10 2008 Daniel P Berrange <berrange@redhat.com> - 0.5.3-1
 - Reintroduce 'new' button
 - Make restore work again
