--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,8 @@
-AC_INIT(virt-manager.spec.in)
-AM_INIT_AUTOMAKE(virt-manager, 0.5.4)
+
+AC_INIT(virt-manager, 0.5.4)
+AC_CONFIG_SRCDIR(src/virt-manager.py.in)
+dnl Make automake keep quiet about wildcards & other GNUmake-isms
+AM_INIT_AUTOMAKE([-Wno-portability])
 
 ALL_LINGUAS="bg bn_IN bs ca cs da de es fi fr gu hi hr hu is it ja kn ko ml mr ms nb nl or pa pl pt_BR pt ro ru sr@latin sr sv ta te tr uk zh_CN zh_TW"
 IT_PROG_INTLTOOL([0.35.0], [no-xml])
