Make .spec BuildRequires a bit more thorough.

--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -53,7 +53,12 @@ ExclusiveArch: %{ix86} x86_64 ia64
 
 BuildRequires: pygtk2-devel
 BuildRequires: gtk2-devel
+BuildRequires: pygobject2-devel
+BuildRequires: glib2-devel
 BuildRequires: python-devel
+BuildRequires: pango-devel
+BuildRequires: atk-devel
+BuildRequires: cairo-devel
 BuildRequires: gettext
 BuildRequires: scrollkeeper
 BuildRequires: intltool
