--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,16 +1,17 @@
 src/virt-manager.desktop.in.in
 src/vmm-about.glade
-src/vmm-console.glade
-src/vmm-create-net.glade
-src/vmm-host.glade
-src/vmm-modify-file-storage.glade
-src/vmm-preferences.glade
-src/vmm-add-hardware.glade
-src/vmm-create.glade
 src/vmm-details.glade
-src/vmm-manager.glade  
+src/vmm-add-hardware.glade
+src/vmm-host.glade
+src/vmm-choose-cd.glade
+src/vmm-manager.glade
+src/vmm-create.glade
 src/vmm-open-connection.glade
+src/vmm-create-net.glade
+src/vmm-preferences.glade
+src/vmm-create-pool.glade
 src/vmm-progress.glade
+src/vmm-create-vol.glade
 src/virt-manager.py.in
 src/virt-manager.schemas.in
 src/virtManager/about.py
@@ -23,15 +24,17 @@ src/virtManager/secret.py
 src/virtManager/addhardware.py
 src/virtManager/connect.py
 src/virtManager/create.py
+src/virtManager/createvol.py
+src/virtManager/createpool.py
+src/virtManager/storagevol.py
+src/virtManager/storagepool.py
 src/virtManager/error.py
 src/virtManager/keyring.py
 src/virtManager/network.py
 src/virtManager/serialcon.py
 src/virtManager/asyncjob.py
-src/virtManager/console.py
 src/virtManager/details.py
 src/virtManager/host.py
-src/virtManager/keytable.py
 src/virtManager/preferences.py
 src/virtManager/config.py
 src/virtManager/createmeter.py
