Create the default pool if user requests '/var/lib/libvirt/images' as a storage dir.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -42,3 +42,4 @@ src/virtManager/domain.py
 src/virtManager/__init__.py
 src/virtManager/manager.py
 src/virtManager/remote.py
+src/virtManager/util.py
