Update spec file description.

--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -68,9 +68,11 @@ Requires(post): GConf2
 Requires(preun): GConf2
 
 %description
-Virtual Machine Manager provides a graphical tool for administering
-virtual machines such as Xen. It uses libvirt as the backend management
-API.
+Virtual Machine Manager provides a graphical tool for administering virtual
+machines for KVM, Xen, and QEmu. Start, stop, add or remove virtual devices,
+connect to a graphical or serial console, and see resource usage statistics
+for existing VMs on local or remote machines. Uses libvirt as the backend
+management API.
 
 %prep
 %setup -q
