--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -149,6 +149,14 @@ fi
 %{_datadir}/man/man1/%{name}.1*
 
 %changelog
+* Wed Sep 10 2008 Cole Robinson <crobinso@redhat.com> - 0.6.0-1
+- Add libvirt storage management support
+- Basic support for remote guest installation
+- Merge VM console and details windows
+- Poll avahi for libvirtd advertisement
+- Hypervisor autoconnect option
+- Add sound emulation when creating new guests
+
 * Mon Mar 10 2008 Daniel P Berrange <berrange@redhat.com> - 0.5.4-1
 - Use capabilities XML when creating guests
 - Allow scaling of VNC window
