Sync some fedora spec file changes with upstream.

--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -13,8 +13,8 @@ Summary: Virtual Machine Manager
 
 Group: Applications/Emulators
 License: GPLv2+
-URL: http://virt-manager.et.redhat.com/
-Source0: http://virt-manager.et.redhat.com/download/sources/%{name}/%{name}-%{version}.tar.gz
+URL: http://virt-manager.org/
+Source0: http://virt-manager.org/download/sources/%{name}/%{name}-%{version}.tar.gz
 BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 
 # These two are just the oldest version tested
@@ -49,8 +49,6 @@ Requires: gtk-vnc-python >= 0.3.4
 # For local authentication against PolicyKit
 Requires: PolicyKit-gnome
 
-ExclusiveArch: %{ix86} x86_64 ia64
-
 BuildRequires: pygtk2-devel
 BuildRequires: gtk2-devel
 BuildRequires: pygobject2-devel
@@ -66,6 +64,8 @@ BuildRequires: intltool
 Requires(pre): GConf2
 Requires(post): GConf2
 Requires(preun): GConf2
+Requires(post): desktop-file-utils
+Requires(postun): desktop-file-utils
 
 %description
 Virtual Machine Manager provides a graphical tool for administering virtual
@@ -126,8 +126,12 @@ fi
 %{_sysconfdir}/gconf/schemas/%{name}.schemas
 %{_bindir}/%{name}
 %{_libexecdir}/%{name}-launch
+%dir %{_libdir}/%{name}/
 %{_libdir}/%{name}/*
 
+%{_mandir}/man1/%{name}.1*
+
+%dir %{_datadir}/%{name}
 %{_datadir}/%{name}/*.glade
 %{_datadir}/%{name}/pixmaps/*.png
 %{_datadir}/%{name}/pixmaps/*.svg
@@ -136,17 +140,21 @@ fi
 %{_datadir}/%{name}/*.pyc
 %{_datadir}/%{name}/*.pyo
 
+%dir %{_datadir}/%{name}/pixmaps/
+%{_datadir}/%{name}/pixmaps/*.png
+%{_datadir}/%{name}/pixmaps/*.svg
+
+%dir %{_datadir}/%{name}/virtManager/
+
 %{_datadir}/%{name}/virtManager/*.py
 %{_datadir}/%{name}/virtManager/*.pyc
 %{_datadir}/%{name}/virtManager/*.pyo
 
-%{_datadir}/omf/%{name}
-%{_datadir}/gnome/help
+%{_datadir}/omf/%{name}/
+%{_datadir}/gnome/help/%{name}
 
 %{_datadir}/applications/%{name}.desktop
 %{_datadir}/dbus-1/services/%{name}.service
-
-%{_datadir}/man/man1/%{name}.1*
 
 %changelog
 * Wed Sep 10 2008 Cole Robinson <crobinso@redhat.com> - 0.6.0-1
