--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -20,6 +20,7 @@ BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 # These two are just the oldest version tested
 Requires: pygtk2 >= 1.99.12-6
 Requires: gnome-python2-gconf >= 1.99.11-7
+Requires: gnome-python2-gnome
 # Absolutely require this version or newer
 Requires: libvirt-python >= 0.4.5
 # Definitely does not work with earlier due to python API changes
