Calculate block and net device statistics
display them in the overview as well as in the vm details

--- a/src/virt-manager.schemas.in
+++ b/src/virt-manager.schemas.in
@@ -73,8 +73,8 @@
       <default>0</default>
 
       <locale name="C">
-        <short>Show disk usage in summary</short>
-        <long>Show the disk usage field in the domain list summary view</long>
+        <short>Show disk I/O in summary</short>
+        <long>Show the disk I/O field in the domain list summary view</long>
       </locale>
     </schema>
 
@@ -86,8 +86,8 @@
       <default>0</default>
 
       <locale name="C">
-        <short>Show network traffic in summary</short>
-        <long>Show the network traffic field in the domain list summary view</long>
+        <short>Show network I/O in summary</short>
+        <long>Show the network I/O field in the domain list summary view</long>
       </locale>
     </schema>
 
