Add dbus-x11 to spec Requires:.

--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -25,6 +25,7 @@ Requires: gnome-python2-gnome
 Requires: libvirt-python >= 0.4.5
 # Definitely does not work with earlier due to python API changes
 Requires: dbus-python >= 0.61
+Requires: dbus-x11
 # Might work with earlier, but this is what we've tested
 Requires: gnome-keyring >= 0.4.9
 # Minimum we've tested with
