--- a/Makefile.am
+++ b/Makefile.am
@@ -6,3 +6,6 @@ EXTRA_DIST = @PACKAGE@.spec COPYING-DOCS xmldocs.make omf.make \
 	intltool-extract.in intltool-merge.in intltool-update.in
 
 DISTCLEAN_FILES = @PACKAGE@.spec intltool-extract intltool-merge intltool-update
+
+rpm: clean
+	$(MAKE) dist && rpmbuild -ta $(distdir).tar.gz
