--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -20,10 +20,10 @@ BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 # These two are just the oldest version tested
 Requires: pygtk2 >= 1.99.12-6
 Requires: gnome-python2-gconf >= 1.99.11-7
-%if "%{fedora}" == "9" || "%{fedora}" >= "10"
-Requires: gnome-python2-gnome
-%else
+%if "%{fedora}" <= "9"
 Requires: gnome-python2
+%else
+Requires: gnome-python2-gnome
 %endif
 # Absolutely require this version or newer
 Requires: libvirt-python >= 0.4.5
