--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -20,7 +20,7 @@ BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 # These two are just the oldest version tested
 Requires: pygtk2 >= 1.99.12-6
 Requires: gnome-python2-gconf >= 1.99.11-7
-%if "%{fedora}" <= "9"
+%if %{fedora} <= 9
 Requires: gnome-python2
 %else
 Requires: gnome-python2-gnome
